agregue un favicon random, removi todos los consoles logs

--- a/cart.html
+++ b/cart.html
@@ -12,24 +12,31 @@
       rel="stylesheet"
     />
 
-
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
     <!-- Nuestro CSS -->
-    <link href="css/navbar.css" rel="stylesheet" />
-    <link href="css/footer.css" rel="stylesheet" />
-    <link href="css/dark_mode.css" rel="stylesheet" />
-    <link href="css/cart.css" rel="stylesheet" />
+    <link href="./css/navbar.css" rel="stylesheet" />
+    <link href="./css/footer.css" rel="stylesheet" />
+    <link href="./css/dark_mode.css" rel="stylesheet" />
+    <link href="./css/cart.css" rel="stylesheet" />
 
     <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/2919f68f3c.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-
-
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
   </head>
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
@@ -66,7 +73,9 @@
                   value="1"
                   required
                 />
-                <label class="dark_mode form-check-label" for="premium">Premium 2 a 5 días (15%)</label>
+                <label class="dark_mode form-check-label" for="premium"
+                  >Premium 2 a 5 días (15%)</label
+                >
                 <br />
                 <input
                   class="form-check-input dark_mode"
@@ -76,7 +85,9 @@
                   value="2"
                   required
                 />
-                <label class="dark_mode form-check-label" for="express">Express 5 a 8 días (7%)</label>
+                <label class="dark_mode form-check-label" for="express"
+                  >Express 5 a 8 días (7%)</label
+                >
                 <br />
                 <input
                   class="form-check-input dark_mode"
@@ -87,13 +98,22 @@
                   checked
                   required
                 />
-                <label class="dark_mode form-check-label" for="standard">Standard 12 a 15 días (5%)</label>
+                <label class="dark_mode form-check-label" for="standard"
+                  >Standard 12 a 15 días (5%)</label
+                >
               </div>
               <h4 class="dark_mode">Direccion de envio</h4>
 
               <div class="mb-3">
-                <label for="select_departamento" class="form-label dark_mode">Departamento:</label>
-                <select id="select_departamento" class="form-select mb-3" required aria-label="Default select example">
+                <label for="select_departamento" class="form-label dark_mode"
+                  >Departamento:</label
+                >
+                <select
+                  id="select_departamento"
+                  class="form-select mb-3"
+                  required
+                  aria-label="Default select example"
+                >
                   <option value="Artigas">Artigas</option>
                   <option value="Canelones">Canelones</option>
                   <option value="Cerro Largo">Cerro Largo</option>
@@ -117,7 +137,9 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_calle" class="form-label dark_mode">Calle:</label>
+                <label for="input_calle" class="form-label dark_mode"
+                  >Calle:</label
+                >
                 <input
                   required
                   type="text"
@@ -129,7 +151,9 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_esquina" class="form-label dark_mode">Esquina:</label>
+                <label for="input_esquina" class="form-label dark_mode"
+                  >Esquina:</label
+                >
                 <input
                   required
                   type="text"
@@ -141,7 +165,9 @@
               </div>
 
               <div class="mb-3">
-                <label for="input_numero_calle" class="form-label dark_mode">Número:</label>
+                <label for="input_numero_calle" class="form-label dark_mode"
+                  >Número:</label
+                >
                 <input
                   required
                   type="text"
@@ -241,33 +267,80 @@
                       <div class="modal-body dark_mode">
                         <div>
                           <div class="form-check">
-                            <label class="form-check-label" for="credit">Tarjeta de Crédito</label>
-                            <input class="form-check-input" type="radio" name="tarjeta" value="1" id="credit" onclick="formaDePago()"/>
+                            <label class="form-check-label" for="credit"
+                              >Tarjeta de Crédito</label
+                            >
+                            <input
+                              class="form-check-input"
+                              type="radio"
+                              name="tarjeta"
+                              value="1"
+                              id="credit"
+                              onclick="formaDePago()"
+                            />
                           </div>
-                          <br/>
+                          <br />
 
                           <label for="numeroTarjeta">Número de tarjeta</label>
                           <br />
-                          <input class="form-control credito" type="text" name="numeroTarjeta" id="numTarjeta" required/>
+                          <input
+                            class="form-control credito"
+                            type="text"
+                            name="numeroTarjeta"
+                            id="numTarjeta"
+                            required
+                          />
                           <br />
                           <label for="code">Código de seg.</label><br />
-                          <input class="form-control credito" required type="text" name="code" id="code"/>
+                          <input
+                            class="form-control credito"
+                            required
+                            type="text"
+                            name="code"
+                            id="code"
+                          />
                           <br />
                           <label for="ven">Vencimiento(MM/AA)</label>
                           <br />
-                          <input class="form-control credito" required type="text" name="ven" id="ven"/>
+                          <input
+                            class="form-control credito"
+                            required
+                            type="text"
+                            name="ven"
+                            id="ven"
+                          />
                           <hr />
                           <div class="form-check">
-                            <input type="radio" class="form-check-input" id="debit" name="tarjeta" onclick="formaDePago()" value="2" required/>
-                            <label for="debit" class="form-check-label">Transferencia Bancaria</label>
+                            <input
+                              type="radio"
+                              class="form-check-input"
+                              id="debit"
+                              name="tarjeta"
+                              onclick="formaDePago()"
+                              value="2"
+                              required
+                            />
+                            <label for="debit" class="form-check-label"
+                              >Transferencia Bancaria</label
+                            >
                           </div>
                           <br />
                           <label for="numCuenta">Número de cuenta</label><br />
-                          <input class="form-control" type="text" name="numCuenta" id="numCuenta" required/>
+                          <input
+                            class="form-control"
+                            type="text"
+                            name="numCuenta"
+                            id="numCuenta"
+                            required
+                          />
                         </div>
                       </div>
                       <div class="modal-footer dark_mode">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                        <button
+                          type="button"
+                          class="btn btn-primary"
+                          data-bs-dismiss="modal"
+                        >
                           Guardar Cambios
                         </button>
                       </div>
@@ -317,7 +390,11 @@
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Nuestro JS -->
     <script src="./js/init.js"></script>
