--- a/login.html
+++ b/login.html
@@ -6,15 +6,23 @@
     <title>Login</title>
 
     <!-- Estilos Franco -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./css/login.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
   </head>
   <body>
-    <main class="md-5"> 
+    <main class="md-5">
       <div class="container" id="login">
         <div class="contenedor-login">
           <h2 class="letra-h2">Iniciar Sesión</h2>
@@ -34,7 +42,7 @@
               /><i class="bx bxs-lock-alt"></i>
             </div>
             <div class="recordarme">
-              <label><input type="checkbox" />Recordar usuario</label><br>
+              <label><input type="checkbox" />Recordar usuario</label><br />
               <a href="./password.html">Olvidaste tu contraseña?</a>
             </div>
             <button type="submit" class="boton-login" onsubmit="redirect()">
