--- a/sell.html
+++ b/sell.html
@@ -29,6 +29,9 @@
       src="https://kit.fontawesome.com/2919f68f3c.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png">
   </head>
 
   <body class="dark_mode">
