--- a/categories.html
+++ b/categories.html
@@ -1,89 +1,143 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>eMercado - Todo lo que busques está aquí</title>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
+      rel="stylesheet"
+    />
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Nuestro css -->
+    <link href="./css/dark_mode.css" rel="stylesheet" />
+    <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/navbar.css" rel="stylesheet" />
+    <link href="./css/footer.css" rel="stylesheet" />
 
-  <!-- Nuestro css -->
-  <link href="css/dark_mode.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <link href="css/navbar.css" rel="stylesheet" />
-  <link href="css/footer.css" rel="stylesheet" />
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/2919f68f3c.js"
+      crossorigin="anonymous"
+    ></script>
 
-   <!-- font awesome -->
-   <script src="https://kit.fontawesome.com/2919f68f3c.js" crossorigin="anonymous"></script>
-</head>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
+  </head>
 
-<body class="dark_mode">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
-  <main class="pb-5">
-    <div class="text-center p-4">
-      <h2>Categorías</h2>
-      <p class="lead">Verás aquí todas las categorías del sitio.</p>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col text-end">
-          <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
-            <input type="radio" class="btn-check" name="options" id="sortAsc">
-            <label class="btn " for="sortAsc">A-Z</label>
-            <input type="radio" class="btn-check" name="options" id="sortDesc">
-            <label class="btn " for="sortDesc">Z-A</label>
-            <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
-            <label class="btn " for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i></label>
+  <body class="dark_mode">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
+    <main class="pb-5">
+      <div class="text-center p-4">
+        <h2>Categorías</h2>
+        <p class="lead">Verás aquí todas las categorías del sitio.</p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col text-end">
+            <div
+              class="btn-group btn-group-toggle mb-4"
+              data-bs-toggle="buttons"
+            >
+              <input
+                type="radio"
+                class="btn-check"
+                name="options"
+                id="sortAsc"
+              />
+              <label class="btn" for="sortAsc">A-Z</label>
+              <input
+                type="radio"
+                class="btn-check"
+                name="options"
+                id="sortDesc"
+              />
+              <label class="btn" for="sortDesc">Z-A</label>
+              <input
+                type="radio"
+                class="btn-check"
+                name="options"
+                id="sortByCount"
+                checked
+              />
+              <label class="btn" for="sortByCount"
+                ><i class="fas fa-sort-amount-down mr-1"></i
+              ></label>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
-          <div class="row container p-0 m-0">
-            <div class="col">
-              <p class="font-weight-normal text-end my-2">Cant.</p>
-            </div>
-            <div class="col">
-              <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
-            </div>
-            <div class="col">
-              <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
-            </div>
-            <div class="col-3 p-0">
-              <div class="btn-group" role="group">
-                <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
-                <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+        <div class="row">
+          <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+            <div class="row container p-0 m-0">
+              <div class="col">
+                <p class="font-weight-normal text-end my-2">Cant.</p>
+              </div>
+              <div class="col">
+                <input
+                  class="form-control"
+                  type="number"
+                  placeholder="min."
+                  id="rangeFilterCountMin"
+                />
+              </div>
+              <div class="col">
+                <input
+                  class="form-control"
+                  type="number"
+                  placeholder="máx."
+                  id="rangeFilterCountMax"
+                />
+              </div>
+              <div class="col-3 p-0">
+                <div class="btn-group" role="group">
+                  <button class="btn btn-light btn-block" id="rangeFilterCount">
+                    Filtrar
+                  </button>
+                  <button class="btn btn-link btn-sm" id="clearRangeFilter">
+                    Limpiar
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div id="cat-list-container" class="row g-4 w-100 mb-4"></div>
       </div>
-      <div id="cat-list-container"  class="row g-4 w-100 mb-4" ></div>
+    </main>
+    <footer class="text-muted"></footer>
+    <div id="spinner-wrapper">
+      <div class="lds-ring">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
-  </main>
-  <footer class="text-muted"></footer>
-  <div id="spinner-wrapper">
-    <div class="lds-ring">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </div>
 
-  <!-- Bootsrap js -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <!-- Bootsrap js -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
-  <!-- Javascript -->
-  <script src="js/init.js"></script>
-  <script src="js/categories.js"></script>
-  <script src="js/validarUsuario.js"></script>
-  <script src="./navbar.js"></script>
-  <script src="./footer.js"></script>
-</body>
-
+    <!-- Javascript -->
+    <script src="./js/init.js"></script>
+    <script src="./js/categories.js"></script>
+    <script src="./js/validarUsuario.js"></script>
+    <script src="./navbar.js"></script>
+    <script src="./footer.js"></script>
+  </body>
 </html>
