--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
     <title>eMercado - Todo lo que busques está aquí</title>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
-
 
     <!-- Nuestro cscs hecho -->
     <link href="./css/navbar.css" rel="stylesheet" />
@@ -29,13 +32,16 @@
       src="https://kit.fontawesome.com/2919f68f3c.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
   </head>
 
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
-    <main >
+    <main>
       <div class="jumbotron text-center"></div>
-      <div class="album ">
+      <div class="album">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -80,7 +86,7 @@
                 />
                 <h3 class="m-3 dark_mode">Muebles</h3>
                 <div class="card-body">
-                  <p  class="card-text dark_mode">
+                  <p class="card-text dark_mode">
                     Muebles antiguos, nuevos y para ser armados por uno mismo.
                   </p>
                 </div>
@@ -88,24 +94,27 @@
             </div>
           </div>
           <div class="row">
-            <a class="btn  btn-lg btn-block" href="categories.html"
-              >Y mucho más!</a>
+            <a class="btn btn-lg btn-block" href="categories.html"
+              >Y mucho más!</a
+            >
           </div>
         </div>
       </div>
     </main>
     <footer class="text-muted dark_mode"></footer>
 
-    
     <!-- nuestro js -->
-    <script src="js/index.js"></script>
-    <script src="js/init.js"></script>
-    <script src="js/validarUsuario.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/init.js"></script>
+    <script src="./js/validarUsuario.js"></script>
     <script src="./navbar.js"></script>
     <script src="./footer.js"></script>
 
     <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
