--- a/password.html
+++ b/password.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recuperar contraseña</title>
-    <link rel="stylesheet" href="./css/password.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/password.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
+  </head>
+  <body>
     <div class="contenedor-recuperar">
-        <h2 class="letra-h2">Recuperar Contraseña</h2>
-        <form id="recuperar-form">
-            <div class="texto-input">
-                <label for="recuperar">Inserte su Mail para recuperar la contraseña:</label>
-                <input type="email" id="recuperar">
-            </div>
-            <button type="submit" class="boton-recuperar">Recuperar Contraseña</button>
-            <div class="texto-input-volver">
-                <p>Haz click <a href="./login.html">aquí</a> para volver al login</p>
-            </div>
-        </form>
+      <h2 class="letra-h2">Recuperar Contraseña</h2>
+      <form id="recuperar-form">
+        <div class="texto-input">
+          <label for="recuperar"
+            >Inserte su Mail para recuperar la contraseña:</label
+          >
+          <input type="email" id="recuperar" />
+        </div>
+        <button type="submit" class="boton-recuperar">
+          Recuperar Contraseña
+        </button>
+        <div class="texto-input-volver">
+          <p>Haz click <a href="./login.html">aquí</a> para volver al login</p>
+        </div>
+      </form>
     </div>
-</body>
+  </body>
 </html>
