--- a/product-info.html
+++ b/product-info.html
@@ -7,32 +7,34 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <title>eMercado - Todo lo que busques está aquí</title>
+
+    <!-- Google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i"
       rel="stylesheet"
     />
 
-
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
-
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
 
     <!-- Nuestro css -->
-    <link href="css/dark_mode.css" rel="stylesheet" />
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/product-info.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link href="css/navbar.css" rel="stylesheet" />
-    <link href="css/footer.css" rel="stylesheet" />
+    <link href="./css/dark_mode.css" rel="stylesheet" />
+    <link href="./css/product-info.css" rel="stylesheet" />
+    <link href="./css/navbar.css" rel="stylesheet" />
+    <link href="./css/footer.css" rel="stylesheet" />
     <!-- font awesome -->
     <script
       src="https://kit.fontawesome.com/2919f68f3c.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
   </head>
 
   <body class="dark_mode">
@@ -46,33 +48,39 @@
             <div id="description" class="col-lg-4"></div>
           </div>
         </div>
-        
-      <!-- Comentarios -->
-      <div id="comments-seccion" class="row">
-        <div id="comentarios-mobile" class=" form-floating col-md-6 col-sm-12">
-          <textarea name="comentarios" class="form-control centered-textarea" placeholder="Ingrese aquí su comentario" id="btnComent" style="height: 200px"></textarea>
-          <label for="floatingTextarea2">Comentario: </label>
-          <div class="">
-            <div class="rating">
-              <input type="radio" id="star5" name="rating" value="5" />
-              <label for="star5"></label>
-              <input type="radio" id="star4" name="rating" value="4" />
-              <label for="star4"></label>
-              <input type="radio" id="star3" name="rating" value="3" />
-              <label for="star3"></label>
-              <input type="radio" id="star2" name="rating" value="2" />
-              <label for="star2"></label>
-              <input type="radio" id="star1" name="rating" value="1" />
-              <label for="star1"></label>
-            </div>
-          </div>
 
-          <button class="btn btn-warning mt-4" id="botonCmt">
-            Enviar comentario
-          </button>
+        <!-- Comentarios -->
+        <div id="comments-seccion" class="row">
+          <div id="comentarios-mobile" class="form-floating col-md-6 col-sm-12">
+            <textarea
+              name="comentarios"
+              class="form-control centered-textarea"
+              placeholder="Ingrese aquí su comentario"
+              id="btnComent"
+              style="height: 200px"
+            ></textarea>
+            <label for="floatingTextarea2">Comentario: </label>
+            <div class="">
+              <div class="rating">
+                <input type="radio" id="star5" name="rating" value="5" />
+                <label for="star5"></label>
+                <input type="radio" id="star4" name="rating" value="4" />
+                <label for="star4"></label>
+                <input type="radio" id="star3" name="rating" value="3" />
+                <label for="star3"></label>
+                <input type="radio" id="star2" name="rating" value="2" />
+                <label for="star2"></label>
+                <input type="radio" id="star1" name="rating" value="1" />
+                <label for="star1"></label>
+              </div>
+            </div>
+
+            <button class="btn btn-warning mt-4" id="botonCmt">
+              Enviar comentario
+            </button>
+          </div>
+          <div id="comments" class="col-md-6 col-sm-12"></div>
         </div>
-        <div id="comments" class="col-md-6 col-sm-12" ></div>
-      </div>
 
         <!-- Puntuacion -->
 
@@ -95,7 +103,11 @@
     </div>
 
     <!-- Bootstrap? y JaP? -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="js/init.js"></script>
 
