--- a/register.html
+++ b/register.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regístrate!</title>
     <link rel="stylesheet" href="./css/register.css" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./favico.png" />
   </head>
   <body>
     <div class="contenedor-register">
