--- a/register.html
+++ b/register.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Regístrate!</title>
+
+    <!-- Nuestro CSS -->
     <link rel="stylesheet" href="./css/register.css" />
 
     <!-- Favicon -->
