--- a/categories.html
+++ b/categories.html
@@ -100,7 +100,7 @@
                   id="rangeFilterCountMax"
                 />
               </div>
-              <div class="col-3 p-0">
+              <div class="col p-0">
                 <div class="btn-group" role="group">
                   <button class="btn btn-light btn-block" id="rangeFilterCount">
                     Filtrar
