--- a/my-profile.html
+++ b/my-profile.html
@@ -40,7 +40,7 @@
 
   <body class="dark_mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1"></nav>
-    <div class="container">
+    <div class="container" id="bloque">
       <div id="contenedor-perfil">
         <h1 class="dark_mode">Perfil</h1>
       </div>
