--- a/cart.html
+++ b/cart.html
@@ -397,6 +397,8 @@
     ></script>
 
     <!-- Nuestro JS -->
+
+    <script src="./js/isValidToken.js"></script>
     <script src="./js/init.js"></script>
     <script src="./js/cart.js"></script>
     <script src="./js/validarUsuario.js"></script>
