--- a/nosotros.html
+++ b/nosotros.html
@@ -113,23 +113,13 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/franco-cantarelli-597988236/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Franco<br /><span>Prueba2</span></h2>
+              <h2>Franco Cantarelli<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -179,23 +169,13 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="www.linkedin.com/in/camila-banizi-473008253"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Camila<br /><span>Prueba2</span></h2>
+              <h2>Camila Banizi<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -273,28 +253,18 @@
             </div>
             <ul class="socail-icon">
               <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://github.com/nachoDavrieux"
                   ><i class="fa-brands fa-github" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/ignacio-davrieux-4236151b9/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Ignacio<br /><span>Prueba2</span></h2>
+              <h2>Ignacio Davrieux<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
