--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Nosotros</title>
 
     <!-- Bootstrap -->
     <link
@@ -47,23 +47,13 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/nahuel-bonifacino-diaz-342a3b27a/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Nahuel<br /><span>Prueba2</span></h2>
+              <h2>Nahuel Bonifacino<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -80,23 +70,13 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/trottafede/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Federico<br /><span>Prueba2</span></h2>
+              <h2>Federico Trotta<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -137,22 +117,12 @@
               </li>
               <li>
                 <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Hernan<br /><span>Prueba2</span></h2>
+              <h2>Hernán Quintan<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -192,23 +162,13 @@
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/chiara-correa-a07b98163/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Chiara<br /><span>Prueba2</span></h2>
+              <h2>Chiara Correa<br /><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -220,28 +180,18 @@
             </div>
             <ul class="socail-icon">
               <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://github.com/GastonNedeff"
                   ><i class="fa-brands fa-github" aria-hidden="true"></i
                 ></a>
               </li>
               <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-twitter" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
-                  ><i class="fa-brands fa-google" aria-hidden="true"></i
-                ></a>
-              </li>
-              <li>
-                <a target="_blank" href="#"
+                <a target="_blank" href="https://www.linkedin.com/in/gast%C3%B3n-nedeff-33b189299/"
                   ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
             </ul>
             <div class="details">
-              <h2>Gaston<br /><span>Prueba2</span></h2>
+              <h2>Gaston Nedeff<br/><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
@@ -264,7 +214,7 @@
               </li>
             </ul>
             <div class="details">
-              <h2>Ignacio Davrieux<br /><span>ㅤ</span></h2>
+              <h2>Ignacio Davrieux<br/><span>ㅤ</span></h2>
             </div>
           </div>
         </div>
